tests/test_proof/bad/dates_simple-empty.catala_en
## Test

```catala
declaration scope A:
  internal x content date
  output y content boolean

scope A:
  definition x equals |2022-01-16|
  definition y under condition x >= |2010-01-01| and x < |2015-01-01| consequence equals false
  definition y under condition x >= |2015-01-01| and x < |2020-01-01| consequence equals true
  definition y under condition x >= |2020-01-01| consequence equals false
```

```catala-test-inline
$ catala Proof --disable_counterexamples 
[WARNING] [A.y] This variable might return an empty error:
┌─⯈ dates_simple-empty.catala_en:6.10-6.11:
└─┐
6 │   output y content boolean
  │          ‾
  └─ Test
Counterexample generation is disabled so none was generated.
```
